<resources>
    <string name="app_name">Ta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <string name="user_name">UserName</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirm_password">confirm password</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register">Register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_not_same_password">Password not same</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="home_page">Home</string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_cart">Add Cart</string>
    <string name="add_cart_success">Add Success</string>
    <string name="all_money">All: </string>
    <string name="symbol">￥ </string>
    <string name="cart_good_count">Count:</string>
    <string name="cart_empty">Empty</string>
    <string name="pay">Pay</string>
    <string name="profile">Personal Profile</string>
    <string name="my_order">My Order</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="about_content">Ta,your best friend!</string>
    <string name="feedback_phone_hint">QQ,Email,Phne</string>
    <string name="feedback_message_hint">Input your advices</string>
    <string name="feed_submit">Submit</string>
    <string name="submitting">Submitting</string>
    <string name="submit_success">Submit Success</string>
    <string name="submit_fail">Submit Fail</string>
    <string name="msg_empty_warning">Message can not been empty!</string>
    <string name="pay_by_weixin">WinXin Pay</string>
    <string name="pay_by_zhifubao">ZhiFuBao Pay</string>
    <string name="pay_count">All: </string>
    <string name="getting_order">Getting Orders...</string>
    <string name="pay_succeed"> Pay Success</string>
    <string name="pay_unknown"> Unknow Pay,please query later</string>
    <string name="get_order_success_redirect_pay_page">Get order success,redirect to pay page</string>
    <string name="pay_fail">Pay fail</string>
    <string name="install">Install</string>
    <string name="query_order_success">query order success</string>
    <string name="query_order_fail">query order fail</string>
    <string name="head_icon">HeadIcon</string>
    <string name="nick_name">Nick</string>
    <string name="good_address">Good Address</string>
    <string name="saving">Saving</string>
    <string name="warning_nick_empty">nick can not be empty</string>
    <string name="warning_address_empty">address or phone or zoneCode can not be empty</string>
    <string name="save_success">save success</string>
    <string name="save_fail">save fail</string>
    <string name="none">None</string>
    <string name="save">Save</string>
    <string name="prompt_address">address</string>
    <string name="prompt_zone_code">zone code</string>
    <string name="refreshing">Refreshing</string>
    <string name="refreshed">Refreshed</string>
    <string name="login_fail">Login fail</string>
</resources>
