<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="25dp"
    tools:context="com.dragon.ta.activity.FeedbackActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/feed_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_phone_hint"
        android:singleLine="true"
        android:textSize="@dimen/text_size_16"/>

    <EditText
        android:id="@+id/feed_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_message_hint"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="25dip"/>

    <Button
        android:id="@+id/feed_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_submit"/>

</LinearLayout>
