<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dragon.ta.activity.ProfileActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/head_container"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@color/colorGray"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_icon"
            android:layout_centerVertical="true"/>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/head_view"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            fresco:roundedCornerRadius="5dp"
            fresco:placeholderImage="@android:drawable/sym_def_app_icon"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nick_container"
        android:layout_width="match_parent"
        android:layout_height="42dip"
        android:background="@color/colorGray"
        android:layout_marginTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/nick_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/none"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dip"
        android:background="@color/colorGray"
        android:layout_marginTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/user_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/none"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/good_address_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="42dip"
        android:background="@color/colorGray"
        android:layout_marginTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        <TextView
            android:id="@+id/tmp_id_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/good_address"/>

        <TextView
            android:id="@+id/good_address_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/none"/>
    </RelativeLayout>

</LinearLayout>
